syntax = "proto3";

option go_package = "github.com/nikitads9/egg-service-api/pkg/egg_api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

service EggNutrition {
    rpc AddMeal (AddMealRequest) returns (AddMealResponse) {
        option (google.api.http) = {
            post: "/meal/add"
            body: "*"
        };
    }
    
    rpc RemoveMeal (RemoveMealRequest) returns (RemoveMealResponse){
        option (google.api.http) = {
            delete: "/meal/remove/{id}"
        };
    }

    rpc GetMeal (GetMealRequest) returns (GetMealResponse){
        option (google.api.http) = {
            get: "/meal/get/{userId}/{id}"
        };
    }
    rpc GetList (GetListRequest) returns (GetListResponse){
        option (google.api.http) = {
            get: "/meal/get-all-meals/{userId}"
        };
    }
    rpc UpdateMeal (UpdateMealRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            put: "/meal/update"
            body: "*"
        };
    }
}

message AddMealRequest {
    int64 userId = 1 [json_name = "userId", (validate.rules).int64 = {gt : 0}]; 
    float weight = 2 [json_name = "weight", (validate.rules).float = {gt : 0}]; 
}

message AddMealResponse {
    message Result {
        int64 id = 1;
    }

    Result result = 1;
}

message RemoveMealRequest {
    int64 id = 1 [json_name = "id", (validate.rules).int64 = {gt : 0}];
    int64 userId = 2 [json_name = "userId", (validate.rules).int64 = {gt : 0}];
}

message RemoveMealResponse {
    int64 removed = 1;
}

message GetMealRequest {
    int64 id = 1 [json_name = "id", (validate.rules).int64 = {gt : 0}];
    int64 userId = 2 [json_name = "userId", (validate.rules).int64 = {gt : 0}];
}

message GetMealResponse {
    int64 id = 1;
    int64 userId = 2; 
    string mealDate = 3; 
    float weight = 4; 
    float proteins = 5;
    float fat = 6;
    float carbo = 7;
    float nutrition = 8;
}

message GetListRequest {
    int64 userId = 1 [json_name = "userId", (validate.rules).int64 = {gt : 0}];
}

message GetListResponse {
    message Result {
        int64 id = 1;
        int64 userId = 2; 
        string mealDate = 3; 
        float weight = 4; 
        float proteins = 5;
        float fat = 6;
        float carbo = 7;
        float nutrition = 8;
    }

    repeated Result results = 1;
}
message UpdateMealRequest {
    int64 id = 1 [json_name = "id", (validate.rules).int64 = {gt : 0}];
    int64 userId = 2 [json_name = "userId", (validate.rules).int64 = {gt : 0}];
    string mealDate = 3 [json_name = "mealDate", (validate.rules).string = {min_len: 1, max_len: 20}]; 
    float weight = 4 [json_name = "weight", (validate.rules).float = {gt : 0}];  
}